from abc import ABC, abstractmethod


class BaseArticleRepository(ABC):
    @abstractmethod
    def create_article(self, article_data):
        """Create a new article document with the provided data."""

    @abstractmethod
    def get_all_articles(self, skip=0, limit=2):
        """Retrieve a list of article documents with pagination."""

    @abstractmethod
    def get_article_by_id(self, article_id):
        """Retrieve a single article document by its unique identifier."""

    @abstractmethod
    def update_article(self, article_id, update_data):
        """Update the article document identified by article_id with the given data."""

    @abstractmethod
    def delete_article(self, article_id):
        """Delete the article document identified by article_id."""

    @abstractmethod
    def search_articles(self, query):
        """Retrieve a list of article documents by query."""